--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-
 @import '/assets/style/reset.scss';
+@import '/assets/style/helpers.scss';
 @import '/assets/style/variables.scss';
 @import '/assets/style/layout.scss';
+// Partials
+@import '/assets/style/partials/dialog';
