--- a/src/app/landing/components/login/login.component.html
+++ b/src/app/landing/components/login/login.component.html
@@ -1,16 +1,22 @@
-<h1>Login</h1>
-<form class="login-form">
-  <div class="form-group">
-    <mat-form-field>
-      <input matInput placeholder="Enter your email" required>
-      <!-- <mat-error>{{getErrorMessage()}}</mat-error> -->
-    </mat-form-field>
-  </div>
+<div class="dialog-wrapper">
+  <h1 class="dialog-title">Login</h1>
+  <form class="dialog-content" [formGroup]="loginForm" id="loginForm" (ngSubmit)="login()">
+    <div class="form-group">
+      <mat-form-field>
+        <input matInput placeholder="Enter your email" required formControlName="email">
+        <mat-error>{{formHelper.getError(loginForm, 'email', 'Email')}}</mat-error>
+      </mat-form-field>
+    </div>
 
-  <div class="form-group">
-    <mat-form-field>
-      <input matInput placeholder="Enter your password" required>
-      <!-- <mat-error>{{getErrorMes`sage()}}</mat-error> -->
-    </mat-form-field>
+    <div class="form-group">
+      <mat-form-field>
+        <input matInput placeholder="Enter your password" required formControlName="password">
+        <mat-error>{{formHelper.getError(loginForm, 'password', 'Password')}}</mat-error>
+      </mat-form-field>
+    </div>
+
+  </form>
+  <div class="dialog-actions dialog-actions-right">
+    <button mat-raised-button color="primary" form="loginForm" type="submit">Login</button>
   </div>
-</form>
+</div>
