--- a/src/app/landing/components/login/login.component.html
+++ b/src/app/landing/components/login/login.component.html
@@ -3,14 +3,14 @@
   <form class="dialog-content" [formGroup]="loginForm" id="loginForm" (ngSubmit)="login()">
     <div class="form-group">
       <mat-form-field>
-        <input matInput placeholder="Enter your email" required formControlName="email">
+        <input type="text" matInput placeholder="Enter your email" required formControlName="email">
         <mat-error>{{formHelper.getError(loginForm, 'email', 'Email')}}</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
       <mat-form-field>
-        <input matInput placeholder="Enter your password" required formControlName="password">
+        <input type="password" matInput placeholder="Enter your password" required formControlName="password">
         <mat-error>{{formHelper.getError(loginForm, 'password', 'Password')}}</mat-error>
       </mat-form-field>
     </div>
