Home start - next full home dev break components

--- a/src/app/landing/components/landing-toolbar/landing-toolbar.component.html
+++ b/src/app/landing/components/landing-toolbar/landing-toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="default">
   <app-toolbar-logo></app-toolbar-logo>
   <div *ngIf="!_userService.isLogged">
     <button mat-button (click)="openLogin()">Login</button>
