--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+// Material 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-@import '/assets/style/reset.scss';
-@import '/assets/style/helpers.scss';
-@import '/assets/style/variables.scss';
-@import '/assets/style/layout.scss';
+
+@import './assets/style/reset';
+@import './assets/style/helpers';
+@import './assets/style/variables';
+@import './assets/style/layout';
 // Partials
-@import '/assets/style/partials/dialog';
+@import './assets/style/partials/dialog';
