--- a/src/app/landing/pages/home/home.component.html
+++ b/src/app/landing/pages/home/home.component.html
@@ -1,4 +1,30 @@
 <div class="page-content">
-    home works!
-  </div>
-  
+
+  <section class="home-section header-intro">
+    <div class="container">
+      <h1 class="heading">
+        Complete Angular6 BoilerApp
+      </h1>
+      <div class="description">
+        <p>Implements Angular Material Design, with Angular best practices for scallable apps that includes best folder
+          structure, routing, modules,components etc.</p>
+        <br />
+        <p>It includes layouts for landing and admin side, with demo components and modules for fast and easy start for
+          any project.</p>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="home-section products">
+    <div class="container">
+      <h1>Our products</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat unde inventore molestias ab adipisci eius
+        nisi placeat at.</p>
+
+
+    </div>
+  </section>
+
+
+</div>
