home as module, home components

--- a/src/app/layouts/landing/pages/home/components/home-products/home-products.component.html
+++ b/src/app/layouts/landing/pages/home/components/home-products/home-products.component.html
@@ -1,6 +1,6 @@
-<section class="home-section products">
+<section class="home-section home-products">
   <div class="container">
-    <h1>LOREM IPSUM</h1>
+    <h2>LOREM IPSUM</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat unde inventore molestias ab adipisci eius
       nisi placeat at.</p>
 
