--- a/src/app/layouts/landing/pages/home/home.component.html
+++ b/src/app/layouts/landing/pages/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="page-content">
   <app-home-heading></app-home-heading>
   <app-home-products></app-home-products>
+  <app-home-information></app-home-information>
+  <app-home-clients></app-home-clients>
+  <app-home-footer></app-home-footer>
 </div>
