--- a/src/app/layouts/landing/pages/home/components/home-products/home-product-item/home-product-item.component.scss
+++ b/src/app/layouts/landing/pages/home/components/home-products/home-product-item/home-product-item.component.scss
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     padding: 0 !important;
     &:hover {
-        box-shadow: 0 3px 11px 2px rgba(33, 33, 33, .2);
+        box-shadow: 0 3px 15px 5px rgba(33, 33, 33, .2);
     }
     .product-image {
         width: 100%;
@@ -11,7 +11,14 @@
         background-size: contain;
         margin: 0 0 1em;
     }
+    .product-title {
+        padding: 0 1em;
+    }
     .product-content {
         padding: 0 1.5em 1.5em;
+        p {
+            font-size: 1.2em;
+            line-height: 120%;
+        }
     }
 }
