--- a/src/app/layouts/landing/pages/home/components/home-footer/home-footer.component.html
+++ b/src/app/layouts/landing/pages/home/components/home-footer/home-footer.component.html
@@ -1,3 +1,15 @@
-<p>
-  home-footer works!
-</p>
+<section class="home-section home-footer">
+  <div class="container home-footer-container">
+    <div class="home-footer-disclaimer">
+      <h5 class="heading">Disclaimer</h5>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis perferendis rem, aut aliquam neque nam?
+        dolor sit amet, consectetur adipisicing elit consectetur adipisicing elit. Officiis perferendis rem, aut
+        aliquam.
+      </p>
+    </div>
+    <div class="home-footer-contact">
+      <h5 class="heading">Contact</h5>
+    </div>
+  </div>
+</section>
